fix(input): placeholder has correct color contrast

--- a/core/src/components/input/input.scss
+++ b/core/src/components/input/input.scss
@@ -31,7 +31,7 @@
   --placeholder-color: initial;
   --placeholder-font-style: initial;
   --placeholder-font-weight: initial;
-  --placeholder-opacity: .5;
+  --placeholder-opacity: .6;
   --padding-top: 0px;
   --padding-end: 0px;
   --padding-bottom: 0px;
